	PR c/14050 	* c-decl.c (set_array_declarator_inner): Don't give error for 	static or type qualifiers in abstract declarator.  Remove 	abstract_p parameter. 	* c-tree.h (set_array_declarator_inner): Update prototype. 	* c-parser.c (c_parser_direct_declarator_inner): Update call to 	set_array_declarator_inner. 	* doc/standards.texi: Update for C99 TC3.

testsuite:
	* gcc.dg/c99-arraydecl-1.c: Don't expect errors for static or type
	qualifiers in abstract declarator.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130362 138bc75d-0d04-0410-961f-82ee72b054a4